--- a/car/templates/rent_car.html
+++ b/car/templates/rent_car.html
@@ -148,7 +148,7 @@ document.getElementById('rzp-button1').onclick = function(e) {
 
     // Razorpay Payment
     var options = {
-        "key": "rzp_test_BzASfuBzeuHtgZ", // Your Razorpay Key ID
+        "key": "", // Your Razorpay Key ID
         "amount": totalPrice * 100, // Amount is in paise (multiply by 100)
         "currency": "INR",
         "name": "Quick Drive",
